# devlog

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: devlog-catchup.md  devlog-manicure.md  (+2 more)
.devlog/: .gitignore  config.yaml  learned.md
.github/: pull_request_template.md
blog/: 2026-04-16-adaptive-convention.md  2026-04-16-squashed-history.md  2026-04-17-decisions-and-stop-hook.md  2026-04-17-global-install.md  2026-04-18-convention-from-survey.md  2026-04-18-landscape-survey.md  2026-05-02-01-timestamps-and-indexed-filenames.md  2026-05-02-02-devlog-catchup-slash-command.md  2026-05-02-03-devlog-write-slash-command.md  2026-05-02-04-devlog-manicure-slash-command.md  2026-05-02-05-copilot-review-preflight-fix.md  2026-05-02-06-copilot-review-round-two.md  2026-05-02-07-copilot-review-round-three.md  2026-05-31-01-stop-hook-reminder-trim.md  2026-06-11-01-agent-codebase-assessment.md  2026-06-12-01-assessment-expanded.md  2026-06-12-02-tier1-shipped.md  2026-06-12-03-copilot-round-asymmetric-trust.md  2026-06-12-04-version-aware-status.md  2026-06-13-01-readme-logo-ansi-shadow.md  2026-06-13-02-readme-audit-against-assessment.md  2026-06-13-03-readme-why-and-results.md  2026-06-14-01-devlog-upgrade-command.md  2026-06-14-02-gitignore-session-log.md  2026-06-14-03-init-gitignores-session-log.md  2026-06-14-04-devlog-upgrade-slash-command.md  2026-06-17-01-terse-entry-reporting.md  _index.md
tests/: conftest.py  test_agents.py  test_cli.py  test_convention.py  test_hook.py  test_manifest.py
(+18 files in other folders)
