[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devlog"
version = "0.1.0"
description = "Installable development blog convention for AI coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
devlog = "devlog_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
devlog_cli = ["templates/**/*"]
